--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "quality": "npm run mirror && npm run improve",
     "scout": "npx tsx src/lib/scout.ts",
     "scout:report": "npx tsx src/lib/report-generator.ts",
-    "scout:blue-ocean": "npx tsx -e \"import('./src/lib/scout.ts').then(m => m.scanBlueOcean(process.env.TOPIC || 'developer-tools'))\""
+    "scout:blue-ocean": "npx tsx -e \"import('./src/lib/scout.ts').then(m => m.scanBlueOcean(process.env.TOPIC || 'developer-tools'))\"",
+    "brief": "tsx scripts/daily-brief.ts",
+    "brief:help": "tsx scripts/daily-brief.ts --help"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
@@ -107,6 +109,7 @@
     "lovable-tagger": "^1.1.13",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.21.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^6.4.1",
